--- a/pulse.opam
+++ b/pulse.opam
@@ -11,7 +11,9 @@ doc: "https://github.com/EnderNight/Pulse/wiki"
 bug-reports: "https://github.com/EnderNight/Pulse/issues"
 depends: [
   "dune" {>= "3.19"}
-  "ocaml"
+  "ocaml" {>= "5.3"}
+  "ppx_deriving" {>= "6.1"}
+  "cmdliner" {>= "1.3"}
   "odoc" {with-doc}
 ]
 build: [
